# mpe

./: .gitattributes  Cargo.toml  README.md  compose.yml
.github/workflows/: build.yml  clippy.yml  rustfmt.yml  test.yml
docs/: getting-started.md  image-metadata.md  output.md  rabbitmq.md  redis.md
docs/specs/: redis-status.md
src/: config.rs  constants.rs  consts.rs  jobs.rs  lib.rs  logger.rs  main.rs  processor.rs  rabbit.rs  tasks.rs
src/messaging/: connection.rs  consumer.rs  mod.rs
src/processor/: image_processor.rs  mod.rs  pipeline.rs  processor.rs  retry.rs  status.rs  video_processor.rs
src/processor/image/: mod.rs  persist_step.rs  privacy_metadata_step.rs  validate_step.rs
src/processor/video/: children_step.rs  matrix_step.rs  mod.rs  normalize_step.rs  package_step.rs  persist_step.rs  validate_step.rs
tests/: rabbitmq.rs  status.rs
