[package]
name = "mpe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
indoc = "2.0.6"
lapin = "3.4.0"
log = "0.4.28"
serde_json = "1.0.145"
threadpool = "1.8.1"

[dependencies.simple_logger]
version = "5.0.0"
features = ["colors", "threads", "timestamps", "stderr"]

[dependencies.tokio]
version = "1.47.1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.223"

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]

[profile.release]
opt-level = "s"
lto = "fat"
