[package]
name = "mpe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
indoc = "2.0.7"
lapin = "4.3.0"
log = "0.4.29"
serde_json = "1.0.149"
threadpool = "1.8.1"

[dependencies.simple_logger]
version = "5.2.0"
features = ["colors", "threads", "timestamps", "stderr"]

[dependencies.tokio]
version = "1.50.0"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.228"

[dependencies.clap]
version = "4.6"
features = ["derive", "env"]

[dependencies.redis]
version = "1.0.5"
features = ["tokio-comp"]

[profile.release]
opt-level = 3
lto = "fat"
